--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
 
           <div class="col-lg-6  d-flex flex-column justify-content-center" data-aos="fade-in">
-            <h1>Build Your Landing Page With <span>Bootslander</span></h1>
+            <h1>Welcome to my <span>website</span></h1>
             <p>We are team of talented designers making websites with Bootstrap</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Get Started</a>
@@ -827,7 +827,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+886 091234567</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -835,7 +835,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>jason12345678@gamil.com</p>
               </div>
             </div><!-- End Info Item -->
 
